Fixed zip error in GitHub Actions

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,5 +31,5 @@ jobs:
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-west-1
         run: |
-          zip -r lambda_function.zip process_energy_data.py
+          zip -r lambda_function.zip .
           aws lambda update-function-code --function-name process_energy_data --zip-file fileb://lambda_function.zip
